# Bachelor-Project-2025

./: .gitignore  README.md  licence.txt
Bc/: data_processing.ipynb  engagement_calculation.ipynb
Bc/datasets/: data.csv
llm_blog_generator/: .gitignore  data_processing.ipynb  generate_blog.sh  pyproject.toml  requirements.txt
llm_blog_generator/data/: bad_blog  data_preprocessing.ipynb  download_dataset.sh  excellent_blog  good_blog  very_good_blog
llm_blog_generator/data/datasets/: blogs.csv  deepmind_blogs.csv  medium_blogs.csv  preprocessed_blogs.csv  preprocessed_deepmind_blogs.csv  preprocessed_medium_blogs.csv
llm_blog_generator/data/examples/: average_blog  bad_blog  best_blog.json  excellent_blog  good_blog  very_good_blog  worst_blog.json
llm_blog_generator/data/experiment_results/: classification_MAE.csv  classification_RMSE.csv  classification_acc.csv  classification_full.json  deepmind_blog_evaluation.csv  generator_assessments.json  generator_best_assessments.json  normalized_numeric_evaluation.csv  normalized_numeric_full.json  numeric_evaluation.csv  numeric_full.json  test_full.json
llm_blog_generator/data/long_term_memory/: index.faiss  index.pkl
llm_blog_generator/data/vector_store/: index.faiss  index.pkl
llm_blog_generator/experiments/: api_tests.ipynb  distance_threshold_calculation.ipynb  llm_blog_evaluator.ipynb  llm_blog_generator.ipynb
llm_blog_generator/src/: __init__.py  blog_generator.py  config.py  data_loader.py  helpers.py  long_term_memory.py  main.py  models_setup.py  output_formats.py  prompts.py  text_extraction.py
