[tool.poetry]
name = "llm-blog-generator"
version = "0.1.0"
description = ""
authors = ["Kanstantsin Downar <downakan@fit.cvut.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
auto-mix-prep = "0.2.0"
fitz = "0.0.1.dev2"
langchain = "0.3.23"
langchain-community = "0.3.21"
langchain-core = "0.3.51"
langchain-google-genai = "2.1.2"
langchain-huggingface = "0.1.2"
matplotlib = "3.10.1"
numpy = "2.2.4"
pandas = "2.2.3"
protobuf = "6.30.2"
pydantic = "2.11.3"
python-dotenv = "1.1.0"
requests = "2.32.3"
scikit-learn = "1.6.1"
scipy = "1.15.2"
seaborn = "0.13.2"
selenium = "4.31.0"
sentence-transformers = "4.0.1"
pymupdf = "^1.25.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
